--- a/backend/plantoml-server/pom.xml
+++ b/backend/plantoml-server/pom.xml
@@ -36,6 +36,24 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>io.opencaesar.oml</groupId>
+			<artifactId>io.opencaesar.oml</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.opencaesar.oml</groupId>
+			<artifactId>io.opencaesar.oml.dsl</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>io.opencaesar.oml</groupId>
+			<artifactId>oml-validate</artifactId>
+			<version>2.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
