--- a/backend/plantoml-server/pom.xml
+++ b/backend/plantoml-server/pom.xml
@@ -54,6 +54,12 @@
 			<artifactId>oml-validate</artifactId>
 			<version>2.4.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>guru.nidi</groupId>
+			<artifactId>graphviz-java</artifactId>
+			<version>0.18.1</version> <!-- Check for the latest version -->
+		</dependency>
 	</dependencies>
 
 	<build>
