--- a/plant-oml/package.json
+++ b/plant-oml/package.json
@@ -11,9 +11,12 @@
     "deflate-js": "^0.2.3",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
+    "jszip-unzip": "^3.4.0-0",
+    "jszip-utils": "^0.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^3.0.1",
+    "uint8-to-base64": "^0.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
