--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-monaco-editor": "^0.54.0",
+    "react-router": "^6.20.1",
+    "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "split-pane-react": "^0.1.3",
     "web-vitals": "^2.1.4"
