--- a/plantoml-extension/package.json
+++ b/plantoml-extension/package.json
@@ -28,6 +28,7 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/decompress": "^4.2.7",
     "@types/mocha": "^10.0.3",
     "@types/node": "18.x",
     "@types/vscode": "^1.84.0",
@@ -40,6 +41,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "decompress": "^4.2.1",
+    "jszip": "^3.10.1"
   }
 }
