put the preview only for OML files

--- a/plantoml-extension/package.json
+++ b/plantoml-extension/package.json
@@ -26,7 +26,7 @@
       "editor/title": [
           {
               "command": "plantoml-extension.previewOMLDiagram",
-              "when": "true",
+              "when": "resourceExtname == .oml",
               "group": "navigation"
           }
       ]
