--- a/plant-oml/package.json
+++ b/plant-oml/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "babel": "^6.23.0",
     "buffer": "^6.0.3",
     "mocha": "^10.2.0",
     "react": "^18.2.0",
@@ -18,6 +19,11 @@
     "build": "react-scripts --openssl-legacy-provider build",
     "test": "mocha",
     "eject": "react-scripts eject"
+  },
+  "babel": {
+    "presets": [
+      "react"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/register": "^7.22.15",
+    "babel-plugin-inline-react-svg": "^2.0.2"
   }
 }
