--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,6 +23,6 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: ./frontend/package-lock.json
-    - run: cd frontend && npm ci
-    - run: npm run build --if-present
-    - run: npm test
+    - run: cd frontend && npm ci --loglevel=error
+    - run: npm run build --if-present --loglevel=error
+    - run: npm test --loglevel=error
