--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "split-pane-react": "^0.1.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@babel/plugin-proposal-private-property-in-object": "*"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
