--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,8 +21,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "split-pane-react": "^0.1.3",
-    "web-vitals": "^2.1.4",
-    "@babel/plugin-proposal-private-property-in-object": "*"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -47,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
