--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "buffer": "^6.0.3",
     "jszip": "^3.10.1",
     "mocha": "^10.2.0",
+    "npm": "^10.2.5",
     "re-resizable": "^6.9.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
