--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,5 +25,5 @@ jobs:
         cache-dependency-path: ./frontend/package-lock.json
     - run: npm install -g npm@10.2.5
     - run: cd frontend && npm ci --silent
-#    - run: npm run build --if-present --silent
+    - run: npm run build --if-present --silent
 #    - run: npm test --silent
