--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,7 +23,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         cache-dependency-path: ./frontend/package-lock.json
-    - run: npm install -g npm@10.2.5
+#    - run: npm install -g npm@10.2.5
+    - run: npm install -g npm@10.1.0
+    - run: npm install -g node@v20.8.0
     - run: cd frontend && npm ci --silent
     - run: npm run build --if-present --silent
 #    - run: npm test --silent
