--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,5 @@ jobs:
     - run: npm install -g npm@10.2.5
     - run: cd frontend && npm ci --silent
     - run: npm update
-    - run: npm run build --if-present --silent
+    - run: npm run build --if-present
 #    - run: npm test --silent
