--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,4 +27,5 @@ jobs:
     - run: cd frontend && npm ci --silent
     - run: npm update
     - run: cd frontend && npm run build --if-present
+    - run: cd frontend && npm test test/api-call-test.js
 #    - run: npm test --silent
